Added fun stuff

--- a/todo-list.html
+++ b/todo-list.html
@@ -15,6 +15,7 @@
    <li>Go to grocery store</li>
    <li>Buy cereal</li>
    <li>Go home with cereal</li>
+   <li>Eat brownies</li>
 </ul>
 
 </body>
