moved stuff around

--- a/todo-list.html
+++ b/todo-list.html
@@ -13,10 +13,11 @@
 
 <ul>
    <li>Go to grocery store</li>
+   <li>Go to sleep</li>
    <li>Buy cereal</li>
    <li>Go home with cereal</li>
+   <li>Buy milk</li>
    <li>Eat brownies</li>
-   <li>Go to sleep</li>
    <li>Watch a movie</li>
 </ul>
 
