Moved other stuff around

--- a/todo-list.html
+++ b/todo-list.html
@@ -14,9 +14,10 @@
 <ul>
    <li>Go to grocery store</li>
    <li>Buy cereal</li>
+   <li>Catch the bus</li>
    <li>Go home with cereal</li>
-   <li>Eat brownies</li>
    <li>Go to sleep</li>
+   <li>Wake up early</li>
    <li>Watch a movie</li>
 </ul>
 
